tests/negative/import_export1_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.
// Use of this source code is governed by a Zero-Clause BSD license that can
// be found in the tests/LICENSE file.

import .import_export1_b as foo
import .import_export1_b

export *
